flapivor/tests/m1/hopix/parser/bad/33-type-definition-sum-3.hopix
type Option<A> = None | Some (a)